# pylistall

./: .gitignore  LICENSE  README.md  README.zh-CN.md  README_cn.md  pyproject.toml
src/pylistall/: __init__.py  cli.py  gitlog.py  selection.py  tree.py  util.py
