[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylistall"
version = "0.2.0"
description = "Copy file contents under a directory to clipboard with tree and optional git log."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "urntt"}]
dependencies = []

[project.scripts]
pylistall = "pylistall.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
